config-root/namespaces/jx/jxboot-helmfile-resources/700-bucketrepo-ing.yaml
# Source: jxboot-helmfile-resources/templates/700-bucketrepo-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: bucketrepo
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: bucketrepo
          servicePort: 80
    host: bucketrepo-jx.192.168.1.202.xip.io
